--- a/application/index/view/foot.html
+++ b/application/index/view/foot.html
@@ -1,3 +1,5 @@
+
+<div style="width: 100%;height: 100px"></div>
 <div class="foot-row row">
   <div class="col-sm-12" style="padding-left: 0px;padding-right: 0px;">
     <section class="panel" style="margin-bottom:0;">
