--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -32,7 +32,7 @@
                             <a href="{:url('login/register')}"> 没有账号？马上注册</a>
                         </span>
                         <span class="pull-right">
-                            <a href="{:url('login/respass')}">忘记密码</a>
+                            <a href="{:url('login/addpwd')}">忘记密码</a>
                         </span>
                     </label>
                     <button class="btn btn-lg btn-login btn-block" onclick="return checkform(this.form);">
