--- a/application/index/view/user/recharge.html
+++ b/application/index/view/user/recharge.html
@@ -45,7 +45,7 @@
         </style>
 		<form action="/index/pay/pays" method="post">
 		<div class="asd">
-			<div pay_type="1" class="payimg biankuang"><img src="/codeimg/alipay.jpg" alt=""><img class="xzjb" src="/codeimg/xzjb.png" alt=""></div>
+			<div pay_type="1" class="payimg biankuang"><img src="/codeimg/alipay.jpg" alt=""><img class="xzjb" src="/codeimg/weixin.png" alt=""></div>
 			<div class="backgr"></div>
             <div pay_type="2" class="payimg"><img src="/codeimg/KJ.png" alt=""></div>
 			<div class="backgr"></div>
