--- a/application/index/view/login/login.html
+++ b/application/index/view/login/login.html
@@ -4,7 +4,7 @@
     <div class="login-bg">
         <div class="container">
             <div class="container-title">
-                <p> 您好，请登录</p>
+                <p>趣买卖</p>
                 <img src="__HOME__/img/logot.png" alt="">
             </div>
             <form class="form-signin" method="post" id="formid">
@@ -32,7 +32,7 @@
                             <a href="{:url('login/register')}"> 没有账号？马上注册</a>
                         </span>
                         <span class="pull-right">
-                            <a href="{:url('login/addpwd')}">忘记密码</a>
+                            <a href="{:url('login/forget')}">忘记密码</a>
                         </span>
                     </label>
                     <button class="btn btn-lg btn-login btn-block" onclick="return checkform(this.form);">
