--- a/application/index/view/user/ercode.html
+++ b/application/index/view/user/ercode.html
@@ -29,7 +29,7 @@
                                           <img alt="" src="https://api.qrserver.com/v1/create-qr-code/?size=240x240&data={$oid_url}">
                                       </div>
                                   </div>
-                                	<div class="xz-tuiguang">推广链接：<?php echo $oid_url;?><br><br><!--span value="<?php echo $oid_url;?>" class="copyVideo" style="color:#10b7ff;cursor:pointer;" onclick="copyVideoUrl(event)">点此复制链接</span--> </div>
+                                	<div class="xz-tuiguang">推广链接：<?php echo $oid_url;?><br><br><span value="<?php echo $oid_url;?>" class="copyVideo" style="color:#10b7ff;cursor:pointer;" onclick="copyVideoUrl(event)">点此复制链接</span> </div>
                               </div>
                           </div>
              		 </div>	
