--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -258,7 +258,6 @@
                         <a href="{:url('order/hold')}">
                             <section class="ico-bottom panel">
                                 <div class="panel-body">
-
                                     <div>
                                         <div class="ioc-fa ioc-fa-coc"></div>
                                     </div>
@@ -271,26 +270,27 @@
                             </section>
                         </a>
                     </div>
-                    <!-- <div class="ico-bottom-left col-lg-12 col-xs-12 col-md-12">
-                        <section class="ico-bottom panel">
-                            <div class=" panel-body">
-                                <a href="{:url('ercode')}">
-                                    <div class="avatar ">
-                                        <div class="ioc-fa ioc-fa-coc"><i class="fa fa-external-link-square ico-fa"></i>
-                                        </div>
+                    <div class="ico-bottom-right col-lg-12 col-xs-12 col-md-12">
+                        <a href="{:url('/index/user/ercode')}">
+                            <section class="ico-bottom panel">
+                                <div class="panel-body">
+                                    <div>
+                                        <div class="ioc-fa ioc-fa-coc"></div>
                                     </div>
                                     <div class="ico-title">
-                                        <h5>分享二维码</h5>
+                                        <h5><img src="__HOME__/img/dd-ye.png" alt="">分享二维码<img
+                                                src="__HOME__/img/user-yjt.png" alt="" class="yjt"></h5>
                                     </div>
-                                </a>
-                            </div>
-                        </section>
-                    </div> -->
+
+                                </div>
+                            </section>
+                        </a>
+                    </div>
+                    
                     <div class="ico-bottom-center col-lg-12 col-xs-12 col-md-12">
                         <a href="{:url('/index/login/respass')}">
                             <section class="ico-bottom panel">
                                 <div class="panel-body">
-
                                     <div>
                                         <div class="ioc-fa ioc-fa-coc"></div>
                                     </div>
@@ -299,7 +299,6 @@
                                                 src="__HOME__/img/user-yjt.png" alt="" class="yjt" style="right:15px;">
                                         </h5>
                                     </div>
-
                                 </div>
                             </section>
                         </a>
@@ -308,7 +307,6 @@
                         <a class="connect" href="javascript:void(0);">
                             <section class="ico-bottom panel">
                                 <div class="panel-body">
-
                                     <div>
                                         <div class="ioc-fa ioc-fa-coc"></div>
                                     </div>
@@ -317,7 +315,6 @@
                                                 src="__HOME__/img/user-yjt.png" alt="" class="yjt" style="right:15px;">
                                         </h5>
                                     </div>
-
                                 </div>
                             </section>
                         </a>
