--- a/application/index/view/goods/goods.html
+++ b/application/index/view/goods/goods.html
@@ -105,7 +105,7 @@ var order_max_price = {:getconf('order_max_price')};
                         </div> 
                        
                         <div class="index-top-right clearfix">
-                                <div class="ico-bottom-right dd-index-cc ">
+                                <!-- <div class="ico-bottom-right dd-index-cc ">
                                         <section   >
                                              <div class="">
                                                    <a href="/index/user/?id=tixian" >
@@ -116,11 +116,11 @@ var order_max_price = {:getconf('order_max_price')};
                                                   </a>
                                                 </div>
                                              </section>
-                                         </div>
+                                         </div> -->
                                 <div class="ico-bottom-right dd-index-cz ">
                                         <section   >
                                              <div class="">
-                                                   <a href="/index/user/?id=tixian" >
+                                                   <a href="/index/user/cash" >
                                                        
                                                         <div class="ico-title" style="color: #fff;">
                                                               <span>提币</span>
@@ -133,7 +133,7 @@ var order_max_price = {:getconf('order_max_price')};
                                     <section >
                                          <div class="">
                                                <!-- <a href="/index/user/?id=chongzhi" > -->
-                                                  <a href="/index/user/?id=chongzhi" >
+                                                  <a href="/index/user/recharge" >
                                                     <div class="ico-title" style="color: #fff;">
                                                           <span>充值</span>
                                                    </div>
