--- a/application/index/view/user/recharge.html
+++ b/application/index/view/user/recharge.html
@@ -45,11 +45,11 @@
         </style>
 		<form action="/index/pay/pays" method="post">
 		<div class="asd">
-			<div pay_type="1" class="payimg biankuang"><img src="/codeimg/alipay.jpg" alt=""><img class="xzjb" src="/codeimg/weixin.png" alt=""></div>
+			<div pay_type="1" class="payimg biankuang"><img src="/codeimg/weixin.jpg" alt=""></div>
 			<div class="backgr"></div>
             <div pay_type="2" class="payimg"><img src="/codeimg/KJ.png" alt=""></div>
 			<div class="backgr"></div>
-			<div pay_type="5" class="payimg"><img src="/codeimg/weixin.jpg" alt=""></div>
+			<!-- <div pay_type="5" class="payimg"><img src="/codeimg/weixin.jpg" alt=""></div> -->
 		</div>
 		<input name="pay_type" type="hidden" value="1">     <!--默认支付类型-->
 		<input name="pay_money" type="hidden" value="200">  <!--默认支付金额-->
