--- a/application/index/view/goods/goods.html
+++ b/application/index/view/goods/goods.html
@@ -886,6 +886,7 @@ var order_max_price = {:getconf('order_max_price')};
                                                           $('#first1').click()
                                                           hold_order_list1()
                                                           $('.uls').html(' ');
+                                                          window.location.reload()
                                                       })
                                                   </script>
                                                   <div class="panel-body">
